Drivers using bone custom properties don't work on modifiers #94874

Closed
opened 2022-01-13 12:31:23 +01:00 by Demeter Dzadik · 8 comments
Member

System Information
Operating system: Linux-5.15.11-76051511-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86

Blender Version
Broken: version: 3.1.0 Alpha, branch: master (modified), commit date: 2022-01-10 11:52, hash: af2823d756
Worked: (newest version of Blender that worked as expected)

Short description of error
Drivers targetting modifiers don't seem to update their values anymore.

Exact steps for others to reproduce the error

  • File: broken_drivers.blend
  • The bone has a custom property called "subdiv" which drives the cube's subsurf levels. But changing the value does nothing, until the driver is edited (eg. click on subtype and choose the same one)
**System Information** Operating system: Linux-5.15.11-76051511-generic-x86_64-with-glibc2.34 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master (modified), commit date: 2022-01-10 11:52, hash: `af2823d756` Worked: (newest version of Blender that worked as expected) **Short description of error** Drivers targetting modifiers don't seem to update their values anymore. **Exact steps for others to reproduce the error** - File: [broken_drivers.blend](https://archive.blender.org/developer/F12803608/broken_drivers.blend) - The bone has a custom property called "subdiv" which drives the cube's subsurf levels. But changing the value does nothing, until the driver is edited (eg. click on subtype and choose the same one)
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...

Can confirm, checking...
Member

Added subscribers: @angavrilov, @Sergey

Added subscribers: @angavrilov, @Sergey
Member

Caused by 7bcf21e66e

CC @angavrilov
CC @Sergey

Caused by 7bcf21e66e CC @angavrilov CC @Sergey
Philipp Oeser changed title from Drivers on modifiers don't work to Drivers using bone custom properties don't work on modifiers 2022-01-13 15:01:47 +01:00

This issue was referenced by f173973ae4

This issue was referenced by f173973ae461bc1be0f2b12b366ca82b9f3c2077

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2022-01-13 15:18:28 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94874
No description provided.