Fix T94874: Drivers using bone custom properties don't work on modifiers